--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <section class="section_2">
       <p>You've used <span>815 GB</span> of your storage</p>
       <div class="modal">
-        <p>
-          <progress value="81.5" max="100"></progress>
-        </p>
+        <div class="meter">
+          <div class="fill"></div>
+        </div>
       </div>
       <div class="modal_2">
-        <p class="values">
-          <span>0 GB</span>
-          <span>1000 GB</span>
+        <p >
+          <span class="value">0 GB</span>
+          <span class="values">1000 GB</span>
         </p>
       </div>
 
@@ -53,7 +53,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Prince Darko Acquah</a>.
+    Coded by <a href="#">Prince_py</a>.
   </div>
   
 </body>
